[package]
name = "recall"
version = "0.1.0"
edition = "2021"
description = "Analyze sales call recordings against a questionnaire"

[lib]
name = "recall"
path = "src/lib.rs"

[[bin]]
name = "recall"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
docx-rs = "0.4.20"
